<resources>
    <!-- meta -->
    <!-- <string name="app_name">Padawan Wallet</string> -->
    <string name="padawan">Padawan</string>
    <string name="elevator_pitch">the bitcoin wallet trainer</string>

    <!-- intro -->
    <string name="welcome_statement">Welcome to Padawan!\n\nThis application is a place to learn the common features of mobile bitcoin wallets.\n\nIt uses bitcoin\'s <i><b>testnet</b></i>, an alternative bitcoin network used globally and built exclusively for testing. The coins on this network do not have any value, but they otherwise look and behave just like normal bitcoins!\n\nThis wallet is built for users of all ages to experiment and learn about bitcoin in a risk-free environment.</string>
    <string name="entry_button">Let\'s go!</string>
    <string name="already_have_a_wallet">I already have a\nPadawan wallet\n(12-words backup)</string>
    <string name="create_new_wallet">I want to create\na new wallet</string>
    <string name="intro_dialog_message">It’s important you know that Padawan is not a bitcoin wallet that can handle normal bitcoins.\n\nThis application is built to help you learn and experiment with bitcoin wallets through a series of tutorials, and it uses testnet coins, a type of bitcoin that doesn\'t have any value.\n\nThe wallet can only handle testnet coins, which are not compatible with normal bitcoins!</string>
    <string name="intro_dialog_title">Be careful!</string>
    <string name="intro_dialog_positive">I understand</string>
    <string name="intro_dialog_negative">Cancel</string>
    <string name="recover_wallet">Recover Wallet</string>

    <!-- wallet -->
    <string name="tab_wallet">Wallet</string>
    <string name="tab_chapters">Chapters</string>
    <string name="wallet_balance_section">Balance (testnet coins)</string>
    <string name="transaction_history_section">Transaction History</string>
    <string name="sync">sync</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="receive_screen_title">Receive bitcoin (testnet)</string>
    <string name="generate_new_address">Generate new address</string>
    <string name="back_to_wallet">Back to wallet</string>
    <string name="send_screen_title">Build transaction (testnet)</string>
    <string name="send_to_address">Send to</string>
    <string name="fee_rate">Fee rate:</string>
    <string name="amount">Amount</string>
    <string name="amount_2">amount</string>
    <string name="verify_transaction">Verify transaction</string>
    <string name="network_fee">Network fee</string>
    <string name="amount_transacted">Amount transacted (satoshis):</string>
    <string name="broadcast_screen_title">Broadcast transaction (testnet)</string>
    <string name="to_address">To the address:</string>
    <string name="total">Total:</string>
    <string name="broadcast_transaction_button">Broadcast transaction</string>
    <string name="back_to_transaction_build">Back to transaction build</string>
    <string name="bitcoin_sign">Ƀ</string>
    <string name="copy_address">copy address</string>
    <string name="satoshi_vbyte">satoshi/vbyte</string>
    <string name="in_satoshis">(in satoshis)</string>
    <string name="scan">Scan</string>
    <string name="address">address</string>

    <!-- chapters -->
    <string name="essentials_section_name">Essentials</string>
    <string name="concept">Concept</string>
    <string name="skill">Skill</string>


    <string name="tutorial_done">Mark tutorial\nas done</string>
    <string name="back_to_list">Back to tutorials list</string>
    <string name="basic">Basics</string>
    <string name="advanced">Advanced</string>

    <!-- drawer -->
    <string name="about_title">About</string>
    <string name="recovery_phrase_title">Recovery Phrase</string>
    <string name="settings_title">Settings</string>
    <string name="send_coins_back_title">Send Coins Back</string>
    <string name="about_text">Padawan is a testnet-only bitcoin wallet packed with tutorials on how to use bitcoin wallets. We\'re building the app you will want to recommend to your friends that keep asking you questions about bitcoin!\n\nPadawan is for people of all ages and aims to be a self-study tool, getting its users acquainted with the usual workflow and basic jargon of mobile wallets in a risk-free environment perfect for experimentation and learning (testnet). We think testnet is an underused resource outside of software development circles, and believe it can be leveraged for bitcoin-curious people everywhere.\n\nPadawan is an open source (Apache 2.0 licenced), free collaborative project. If you have feedback for us, please leave us a review on the Play Store, or check out our GitHub repository!</string>
    <string name="send_coins_back">Testnet coins can be hard to acquire, and even though they have no market value, they are not infinite, and we should be careful not to waste them or let them get lost!\n\nOnce you are done with your testnet coins, please consider sending them back to the Padawan project so that we can continue sending coins to new users. Use the address above to send your coins back to us.</string>
    <string name="open">Open drawer</string>
    <string name="close">Close drawer</string>
    <string name="reset_tutorials">Reset Done Tutorials</string>
    <string name="request_testnet_coins">Request Testnet Coins!</string>
    <string name="privacyText">Padawan Wallet does not collect any information on its users, and does not use Firebase Crashlytics. This, however, means it\'s much harder for us to hear about the bugs from our users. If you have feedback, feel free to send a message to the Padawan Twitter/X account (@padawanwallet) or to write us an email. You can read our full privacy policy here:</string>
    <string name="privacyLink">https://github.com/thunderbiscuit/padawan-wallet/blob/master/PRIVACY</string>
    <string name="send_coins_back_address">tb1qk5238eluqllq2wps67lkxme3x43wll4k282s8q</string>
    <string name="copyAddrStr">Copy</string>
    <string name="errorFaucet">Error: Faucet Not Available</string>
    <string name="oneTimeFaucet">Error: you\'ve already received testnet coins!</string>
    <string name="textCopied">Copied</string>
    <string name="cancel">Cancel</string>
    <string name="generate_a_new_address">Generate a new address</string>
    <string name="fees_sats_vbytes">Fees (sats/vbytes)</string>
    <string name="enter_amount_sats">Enter amount (sats)</string>
    <string name="enter_a_bitcoin_testnet_address">Enter a bitcoin testnet address</string>
    <string name="padawan_journey">Padawan journey</string>
    <string name="continue_on_your_journey">Continue on your journey of learning bitcoin.</string>
    <string name="getting_started">Getting started</string>
    <string name="transactions">Transactions</string>
    <string name="wallets">Wallets</string>
    <string name="chapter">Chapter %1$s</string>
    <string name="start_chapter">Start Chapter</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="back_to_lessons">Back to lessons</string>
    <string name="section">Section %1$s: %2$s</string>
    <string name="transaction_details">Transaction details</string>
    <string name="total_transaction_amount">Total transaction amount:</string>
    <string name="transaction_type">Transaction type:</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="time">Time:</string>
    <string name="pending">Pending</string>
    <string name="txid">Txid:</string>
    <string name="fees_paid">Fees paid:</string>
    <string name="back_icon">Back icon</string>
    <string name="image">image</string>
    <string name="next_icon">Next icon</string>
    <string name="of_3_done">of 3 done</string>
    <string name="padawan_logo">Padawan Logo</string>
    <string name="padawan_wallet">Padawan Wallet</string>
    <string name="create_a_wallet">Create a wallet</string>
    <string name="recover_it_here">Recover it here</string>
    <string name="recover_a_wallet">Recover a wallet</string>
    <string name="enter_your_12_words">Enter your 12-word recovery phrase below.</string>
    <string name="about_padawan">About Padawan</string>
    <string name="change_language">Change the language</string>
    <string name="your_recovery_phrase">Your recovery phrase</string>
    <string name="checkmark_image">Checkmark image</string>
    <string name="copy_to_clipboard_image">Copy to clipboard image</string>
    <string name="send_your_coins_back_to_us">Send your coins back to us!</string>
    <string name="return_sats_faucet_address_image">Return sats faucet address image</string>
    <string name="settings">Settings</string>
    <string name="everything_else">A collection of everything else you need in the app.</string>
    <string name="recovery_phrase">Recovery phrase</string>
    <string name="scan_icon">Scan icon</string>
    <string name="send_testnet_coins_back">Send testnet coins back</string>
    <string name="chapters_reset_successful">Chapters reset successful</string>
    <string name="reset_completed_chapters">Reset completed chapters</string>
    <string name="receive_bitcoin">Receive bitcoin</string>
    <string name="qr_code">QR Code</string>
    <string name="send_bitcoin">Send bitcoin</string>
    <string name="balance">Balance:</string>
    <string name="scan_qr_icon">Scan QR Icon</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="your_device_is_not_connected_to_the_internet">Your device is not connected to the internet!</string>
    <string name="confirm_and_broadcast">Confirm and broadcast</string>
    <string name="amount_error_message">Amount is missing!</string>
    <string name="address_error_message">Address is missing!</string>
    <string name="fee_rate_error_message">Fee Rate is missing!</string>
    <string name="back_online">Back Online!</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="connectivity_icon">Connectivity icon</string>
    <string name="send_icon">Send icon</string>
    <string name="receive_icon">Receive icon</string>
    <string name="block">Block:</string>
    <string name="currently_unable_to_access_network">Currently unable to access network</string>
    <string name="bitcoin_testnet">bitcoin testnet</string>
    <string name="looks_like_your_transaction_list_is_empty">Hey! It looks like your transaction list is empty. Take a look around, and come back to get some coins so you can start playing with the wallet!</string>
    <string name="get_coins_icon">Get coins icon</string>
    <string name="currency_toggle_text">Currency Toggle Text</string>
    <string name="changing_color_animation">Changing color animation</string>
    <string name="hello_there">Hello there!</string>
    <string name="would_you_like_to_receive_some_testnet_bitcoin">To help you get started learning about bitcoin, Padawan Wallet can send you some coins so you can follow along the chapters and send them around to friends!\n\nWould you like to receive some testnet bitcoin?</string>
    <string name="no_thank_you_icon">No thank you icon</string>
    <string name="proceed_icon">Proceed icon</string>
    <string name="no_internet_access">No Internet Access!</string>
    <string name="select_your_preferred_language">Select your preferred language for Padawan Wallet.</string>
    <string name="transaction_was_broadcast_successfully">Transaction was broadcast successfully!</string>
    <string name="get_coins">Get coins</string>
    <string name="bottom_nav_wallet">Wallet</string>
    <string name="bottom_nav_chapters">Learn</string>
    <string name="bottom_nav_settings">Menu</string>
</resources>
