<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg0soft"
    tools:context=".wallet.wallet.WalletBuild">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/orange"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center"
        android:text="@string/send_screen_title"
        android:textColor="@color/fg1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonScan"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/bg2_light"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/scan"
        app:icon="@drawable/ic_camera"
        app:layout_constraintBottom_toTopOf="@+id/sendAddress"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/toAddressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/nunito_sans"
        android:textSize="16sp"
        android:text="@string/send_to_address"
        android:textColor="@color/fg1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/sendAddress"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/bg0"
        android:fontFamily="@font/share_tech_mono"
        android:gravity="center"
        android:hint="@string/address"
        android:inputType="text"
        android:text=""
        android:textColor="@color/fg1"
        android:textColorHint="@color/fg2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toAddressText"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_sans"
        android:textSize="16sp"
        android:text="@string/amount"
        android:textColor="@color/fg1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendAddress" />

    <EditText
        android:id="@+id/sendAmount"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/bg0"
        android:fontFamily="@font/share_tech_mono"
        android:gravity="center"
        android:hint="@string/in_satoshis"
        android:inputType="phone"
        android:textColor="@color/fg1"
        android:textColorHint="@color/fg2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountText"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/feeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_sans"
        android:textSize="16sp"
        android:text="@string/fee_rate"
        android:textColor="@color/fg1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendAmount" />



    <com.google.android.material.slider.Slider
        android:id="@+id/feeRate"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        app:trackColor="@color/bg2"
        app:thumbColor="@color/fg1"
        app:tickColor="@color/bg2"
        android:valueFrom="0"
        android:valueTo="20"
        android:stepSize="0.1"
        tools:layout_editor_absoluteX="157dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feeText"
        android:contentDescription="@string/fee_rate_slider"
        tools:layout_editor_absoluteY="415dp" />


    <Button
        android:id="@+id/buttonVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="320dp"
        android:height="80dp"
        android:backgroundTint="@color/bg2"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/verify_transaction"
        android:textAllCaps="false"
        android:textColor="@color/fg1"
        android:textSize="17sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feeRate" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="0dp"
        android:layout_marginVertical="0dp"
        android:backgroundTint="@color/bg4"
        android:drawablePadding="0dp"
        android:fontFamily="@font/nunito_sans"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minHeight="0dp"
        android:paddingVertical="0dp"
        android:text="@string/back_to_wallet"
        android:textColor="@color/fg1"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>
